fix: align image

--- a/src/App.css
+++ b/src/App.css
@@ -94,8 +94,8 @@ a {
   left: 0;
   z-index: 8;
   transform-origin: center;
-  scale: 0.92;
-  translate: 0.5% 0;
+  scale: 0.917;
+  translate: 0.25% 0%;
 }
 
 .preview-canvas {
@@ -108,6 +108,7 @@ a {
 
 .preview-canvas.stroke {
   z-index: 7;
+  translate: 0.2% 0;
 }
 
 .config-area {
